# zta-banking

./: .gitignore  NOTICE  README.md  pyproject.toml
docs/: architecture.md  conditions.md  configuration.md  dcop-collusion.md  evaluation.md  scenarios.md  wrapper-usage.md
examples/: banking_zta_basic.yaml  browserart_env_specialists_topology.yaml  browserart_extension_multistep.yaml  browserart_quick_test.yaml  browserart_single_agent.yaml  collusion_hospital.yaml  collusion_jira_ticket.yaml  collusion_meeting_scheduling.yaml  collusion_swe_bench.yaml  converse_basic.yaml  converse_benign_baseline.yaml  converse_cross_session_propagation.yaml  converse_guardian_privacy.yaml  converse_guardian_security.yaml  converse_memory_poisoning.yaml  converse_monitor_privacy.yaml  converse_monitor_security.yaml  converse_privacy_only.yaml  converse_prompt_vaccination.yaml  converse_vaccination_security.yaml  demo1_single_agent.yaml  demo2_specialist_dispatch.yaml  demo3_multistep_specialists.yaml  demo_multi_agent_attack_defense.yaml  jira_ticket_baseline.yaml  jira_ticket_channel_only.yaml  osworld_benchmark_basic.yaml  osworld_benchmark_injection.yaml  osworld_osharm_basic.yaml  per_agent_models_coding.yaml  redcode_gen_basic.yaml  redcode_gen_dual_llm.yaml  redcode_gen_prompt_vaccination.yaml  run_extension_env_specialists.sh  run_single_extension_task.sh  swe_bench_codebase_injection.yaml  swe_bench_codebase_injection_behavioral.yaml  swe_bench_codebase_injection_dual_llm.yaml  swe_bench_codebase_injection_targeted.yaml  swe_bench_collusion_side_task.yaml  (+14 more)
orbit/: _registry.py
scripts/: _browserart_log_utils.py  _neurips_judge_utils.py  _osworld_log_utils.py  analyze_browserart_study.py  analyze_icml_experiments.py  analyze_swe_bench_groups.py  build_agentharm_data.py  build_demo_video.sh  check_browserart_errors.py  check_browserart_validity.py  check_neurips_discrepancy.py  check_neurips_errors.py  check_neurips_validity.py  check_osworld_validity.py  check_setup.py  cloud_setup.sh  (+31 more)
(+223 files in other folders)
